Section#Our Clients & Section#Accreditations ISSUE: carousel items too big on mobile screens SOL: set max-height & min height for images/logos

--- a/scss/main-sections/_accreditations.scss
+++ b/scss/main-sections/_accreditations.scss
@@ -7,9 +7,10 @@ div.accreditations-container{
             background-color: white;
             margin: 40px 0 70px 20px;
             width: 100%;
-            height: 70px;
             display: flex;
             flex-wrap: nowrap;
+            justify-content: center;
+            align-items: center;
             gap: 90px;
             @include client-partners-logo;
         }
